typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            145,
        ),
        hi: BytePos(
            146,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts:5:14
  |
5 |             support = d;
  |                       ^

